k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stocksplat-deployment
  labels:
    app: stocksplat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stocksplat
  template:
    metadata:
      labels:
        app: stocksplat
    spec:
      containers:
        - name: stocksplat
          image: johnathanhegge/stocksplat:2
          ports:
            - containerPort: 8080
              name: flask
          imagePullPolicy: Always
