k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stocksplat-service
  namespace: default
  labels:
    app: stocksplat
spec:
  selector:
    app: stocksplat
  ports:
    - port: 8080
      targetPort: 8080
