k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stocksplat-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: stocksplat.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stocksplat-service
                port:
                  number: 8080
#spec:
#  defaultBackend:
#    service:
#      name: stocksplat-service
#      port:
#        number: 8080
#  ingressClassName: nginx-example
#  rules:
#  - http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: stocksplat-service
#            port:
#              number: 8080

#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: test-ingress
#spec:
#  defaultBackend:
#    service:
#      name: test
#      port:
#        number: 80


#              apiVersion: networking.k8s.io/v1beta1
#              kind: Ingress
#              metadata:
#                name: flask-ingress
#                annotations:
#                  kubernetes.io/ingress.class: nginx
#                  nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
#              spec:
#                rules:
#                  - host: foo.example.com
#                    http:
#                      paths:
#                      backend:
#                        serviceName: flask-service
#                        servicePort: http
